--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ fengmk2 <fengmk2@gmail.com> (https://github.com/fengmk2)
 fool2fish <fool2fish@gmail.com> (https://github.com/fool2fish)
 gxcsoccer <gxcsoccer@126.com> (https://github.com/gxcsoccer)
 tangyao <tangyao@taobao.com> (https://github.com/coolme200)
+leoner <kangpangpang@gmail.com> (https://github.com/leoner)
